- add docker - add at - add git

--- a/roles/at/tasks/main.yml
+++ b/roles/at/tasks/main.yml
@@ -4,5 +4,5 @@
   tasks:
     - name: Ensure 'at' is installed
       apt: 
-        name: "at"
-        state: present
+        name: at
+        state: latest
