--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -9,10 +9,16 @@
   become: true
   apt:
     name: sudo
-    state: present
+    state: latest
 
 - name: "Install zsh and shell completions"
   become: true
   apt:
     name: ["zsh", "bash-completion"]
-    state: present
+    state: latest
+
+- name: "Install htop"
+  become: true
+  apt:
+    name: htop
+    state: latest
