fix at main.yml

--- a/roles/at/tasks/main.yml
+++ b/roles/at/tasks/main.yml
@@ -1,8 +1,6 @@
 ---
-- hosts: all
-  become: yes # Run this playbook as sudo
-  tasks:
-    - name: Ensure 'at' is installed
-      apt: 
-        name: at
-        state: latest
+- name: Ensure 'at' is installed
+  become: true
+  apt:
+    name: at
+    state: latest
