--- a/roles/system-config/tasks/main.yml
+++ b/roles/system-config/tasks/main.yml
@@ -1,14 +1,16 @@
-- name: "Ensure /etc/sudoers.d exists"
+- name: Ensure /etc/sudoers.d exists
   file:
     path: "/etc/sudoers.d"
     state: directory
     owner: root
     group: root
 
-- name: "Set the timezone"
+- name: Set the {{ time_zone_file }} timezone
   file:
     src: "/usr/share/zoneinfo/{{ time_zone_file }}"
     dest: "/etc/localtime"
     state: link
     owner: root
     group: root
+
+include_tasks: shell-config.yml
