--- a/roles/apt/tasks/zsh.yml
+++ b/roles/apt/tasks/zsh.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Install zsh and shell completions"
+- name: Install zsh and shell completions
   become: true
   apt:
     name: ["zsh", "bash-completion"]
