--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -11,6 +11,7 @@
     state: absent
 
 - name: Install pre-requisites
+  become: true
   apt:
     pkg:
       - ca-certificates
@@ -27,12 +28,14 @@
     state: present
 
 - name: Add Docker Repository
+  become: true
   apt_repository:
     repo: "deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable"
     state: present
     filename: docker
 
 - name: Update apt and install docker-ce
+  become: true
   apt:
     pkg:
       - docker-ce
@@ -40,9 +43,8 @@
       - containerd.io
     state: latest
     update_cache: true
-
-- name: Add ansible user to docker group
-  user:
-    name: ansible
-    groups: docker
-    append: yes
+#- name: Add ansible user to docker group
+#  user:
+#    name: ansible
+#    groups: docker
+#    append: yes
