--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -23,6 +23,7 @@
     update_cache: yes
 
 - name: Add signing key
+  become: true
   apt_key:
     url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
     state: present
