--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -35,7 +35,7 @@
     state: present
     filename: docker
 
-- name: Update apt and install docker-ce
+- name: Install Docker & dependencies
   become: true
   apt:
     name:
