--- a/vars.yml
+++ b/vars.yml
@@ -1,3 +1,5 @@
 ---
 time_zone_file: "America/New_York"
 user_name: william
+docker_hub_username: zinknotthemetal
+docker_hub_password: 2.P4r,N9K)s9CyL,
