--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -5,7 +5,6 @@
     name: "{{ user_name }}"
     shell: /bin/zsh
     state: present
-  become: yes
 
 - name: Ensure that the .zprofile is loaded
   become: true
@@ -20,3 +19,11 @@
   file:
     path: /home/william/.config
     state: directory
+
+- name: Ensure that the aliasrc file is loaded
+  become: true
+  copy:
+    src: aliasrc
+    dest: /home/william/.config/aliasrc
+    owner: root
+    group: root
