--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -1,15 +1,14 @@
 ---
 - name: Check if Automatic Southwest Check-in scripts exists
-  stat:
+  scripts:
     path: /home/william/Southwest.AutomaticCheckIn/scripts
-  register: swac_scripts_result
+  register: swac_path
 
 - name: Clone Automatic Southwest check-in (scripts)
   git:
     repo: git@github.com:ZinkNotTheMetal/Southwest.AutomaticCheckIn.git
     dest: /home/william/git/Southwest.AutomaticCheckIn
     accept_hostkey: yes
-  when: not swac_scripts_result.stats.exists
-
+  when: not swac_path.scripts.exists
 # copy scripts and template
 # remove folder
