--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -16,33 +16,14 @@
     path: /home/william/Southwest-Check-In
     state: directory
 
-- name: Find shell files to move
-  find:
-    paths: /home/william/git/Southwest.AutomaticCheckIn/scripts/
-    file_type: file
-    patterns: "*.sh"
-    use_regex: no
-    recurse: no
-  register: script_files_to_move
-  when: not swac_scripts.stat.exists
-
-- name: Move all shell files
+- name: Move shell files to Southwest directory
   copy:
-    src: "{{ item }}"
-    dest: /home/william/Southwest-Check-In
+    src: "{{ items }}"
+    dest: /home/william/Southwest-Check-In/
     remote_src: yes
-  with_items:
-    - "{{ script_files_to_move.files }}"
+  with_fileglob:
+    - "/home/william/git/Southwest.AutomaticCheckIn/scripts *.sh"
   when: not swac_scripts.stat.exists
-
-#- name: Move shell files to Southwest directory
-#  copy:
-#    src: "{{ items }}"
-#    dest: /home/william/Southwest-Check-In
-#    remote_src: yes
-#  with_fileglob:
-#    - "/home/william/git/Southwest.AutomaticCheckIn/scripts /*.sh"
-#  when: not swac_scripts.stat.exists
 
 - name: Move template file
   copy:
