--- a/roles/southwest-checkin/tasks/docker-pull.yml
+++ b/roles/southwest-checkin/tasks/docker-pull.yml
@@ -4,5 +4,8 @@
     username: "{{ docker_hub_username }}"
     password: "{{ docker_hub_password }}"
     reauthorize: yes
-#- name: Pull Southwest Automatic check-in image
-#  docker_pull:
+
+- name: Pull Southwest Automatic check-in image
+  docker_image:
+    name: zinknotthemetal/southwest-automatic-checkin:lateset
+    source: pull
