--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,55 +1,11 @@
 ---
-- name: Remove old docker versions
-  become: true
-  apt:
-    pkg:
-      - docker
-      - docker-engine
-      - docker.io
-      - containerd
-      - runc
-    state: absent
+- import_tasks: install.yml
 
-- name: Install pre-requisites
-  become: true
-  apt:
-    pkg:
-      - ca-certificates
-      - curl
-      - gnupg
-      - lsb-release
-      - apt-transport-https
-    state: latest
-    update_cache: yes
-
-- name: Add signing key
-  become: true
-  apt_key:
-    url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
-    state: present
-
-- name: Add Docker Repository
-  become: true
-  apt_repository:
-    repo: "deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable"
-    state: present
-    filename: docker
-
-- name: Install Docker & dependencies
-  become: true
-  apt:
-    name:
-      - docker
-      - docker.io
-      - docker-compose
-      - docker-registry
-    state: latest
-    update_cache: true
-
-- name: Docker is running
-  service:
-    name: docker
-    state: started
+- name: Create docker data volume
+  path: /docker
+    state: directory
+    mode: '0755'
+    owner: root
 
 - name: Add ansible user to docker group
   become: true
@@ -57,3 +13,14 @@
     name: "{{ user_name }}"
     groups: docker
     append: yes
+
+- name: Create IPVLAN L3 docker network
+  become: true
+  docker_network:
+    name: port-freedom
+    ipam_config:
+      - subnet: 192.168.87.0/24
+      - subnet: 192.168.99.0/24
+    driver_options:
+      parent: eth0
+      ipvlan_mode: l3
