add create-network back

--- a/roles/docker/tasks/create-network.yml
+++ b/roles/docker/tasks/create-network.yml
@@ -1,1 +1,11 @@
 ---
+- name: Create IPVLAN L3 docker network
+  become: true
+  docker_network:
+    name: port-freedom
+    ipam_config:
+      - subnet: 192.168.87.0/24
+      - subnet: 192.168.99.0/24
+    driver_options:
+      parent: eth0
+      ipvlan_mode: l3
