--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -2,8 +2,10 @@
 - import_tasks: install.yml
 
 - name: Create docker data volume
-  path: "/docker"
-  state: directory
+  become: true
+  file:
+    path: "/docker"
+    state: directory
     mode: '0755'
     owner: root
 
