attempt to fix docker network

--- a/roles/docker/tasks/create-network.yml
+++ b/roles/docker/tasks/create-network.yml
@@ -8,5 +8,5 @@
       parent: eth0
       ipvlan_mode: l3
     ipam_config:
-      subnet: "{{ docker_network_ip_outside }}/24"
-      subnet: "{{ docker_network_ip_inside }}/24"
+      - subnet: "{{ docker_network_ip_outside }}/24"
+      - subnet: "{{ docker_network_ip_inside }}/24"
