--- a/roles/docker/tasks/create-network.yml
+++ b/roles/docker/tasks/create-network.yml
@@ -1,11 +1,17 @@
 ---
+- name: Find physical network adapter
+  command: find /sys/class/net -type l -not -lname '*virtual*' -printf '%f\n'
+  register: physical_interfaces_cmd
+  changed_when: false
+  check_mode: false
+
 - name: Create IPVLAN L3 docker network
   become: true
   docker_network:
     name: port-freedom
     driver: ipvlan
     driver_options:
-      parent: eth0
+      parent: "{{ pysical_interfces_cmd.stdout_lines[0]}}"
       ipvlan_mode: l3
     ipam_config:
       - subnet: "{{ docker_network_ip_outside }}/24"
