--- a/roles/nut/tasks/configure.yml
+++ b/roles/nut/tasks/configure.yml
@@ -1,8 +1,32 @@
 ---
-- name: Ensure that the .zprofile is loaded
+- name: Ensure that the ups.conf is loaded
   become: true
   copy:
     src: eaton.conf
     dest: /etc/nut/ups.conf
+    owner: root
+    group: root
+
+- name: Ensure that upsd.conf is loaded
+  become: true
+  copy:
+    src: upsd.conf
+    dest: /etc/nut/upsd.conf
+    owner: root
+    group: root
+
+- name: Ensure that upsd.users is loaded
+  become: true
+  copy:
+    src: upsd.users.j2
+    dest: /etc/nut/upsd.users
+    owner: root
+    group: root
+
+- name: Ensure that upsmon.conf is loaded
+  become: true
+  copy:
+    src: upsmon.conf.j2
+    dest: /etc/nut/upsd.conf
     owner: root
     group: root
