create watchtower application in docker

--- a/site.yml
+++ b/site.yml
@@ -3,17 +3,19 @@
   vars_files:
     - "vars.yml"
   roles:
-    - role: apt
-      tag: "apt"
-    - role: system-config
-      tag: "system-config"
-    - role: git
-      tag: "git"
-    - role: docker
-      tag: "docker"
+#    - role: apt
+#      tag: "apt"
+#    - role: system-config
+#      tag: "system-config"
+#    - role: git
+#      tag: "git"
+#    - role: docker
+#      tag: "docker"
     - role: southwest-checkin
       tag: "southwest-checkin"
-    - role: at
-      tag: "at"
-    - role: nut
-      tag: "nut"
+#    - role: at
+#      tag: "at"
+#    - role: nut
+#      tag: "nut"
+    - role: watchtower
+    - tag: "watchtower"
