--- a/roles/watchtower/tasks/main.yml
+++ b/roles/watchtower/tasks/main.yml
@@ -9,8 +9,8 @@
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/etc/timezone:/etc/timezone:ro"
     env:
-      WATCHTOWER_CLEANUP: true
-      WATCHTOWER_INCLUDE_RESTARTING: true
-      WATCHTOWER_LABEL_ENABLE: true
+      "WATCHTOWER_CLEANUP": true
+      "WATCHTOWER_INCLUDE_RESTARTING": true
+      "WATCHTOWER_LABEL_ENABLE": true
     labels:
       com.centurylinklabs.watchtower.enable: true
