--- a/roles/watchtower/tasks/main.yml
+++ b/roles/watchtower/tasks/main.yml
@@ -4,6 +4,8 @@
     name: watchtower
     image: containrrr/watchtower
     restart_policy: unless-stopped
+    networks:
+      - name: bridge
     pull: true
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
