change variable name add pi-hole

--- a/roles/transmission-openvpn/tasks/main.yml
+++ b/roles/transmission-openvpn/tasks/main.yml
@@ -16,8 +16,16 @@
       OPENVPN_CONFIG: "{{ vpn_country }}"
       OPENVPN_USERNAME: "{{ vpn_username }}"
       OPENVPN_PASSWORD: "{{ vpn_password }}"
+      GLOBAL_APPLY_PERMISSIONS: "true"
+      CREATE_TUN_DEVICE: "true"
+      PUID: 1000
+      PGID: 1000
+      HEALTH_CHECK_HOST: "google.com"
+      SELFHEAL: "false"
       LOCAL_NETWORK: "192.168.0.0/16"
+      PUID: 
     ports:
+      - 8118:8118
       - 9091:9091
     labels:
       com.centurylinklabs.watchtower.enable: "true"
