--- a/site.yml
+++ b/site.yml
@@ -3,20 +3,29 @@
   vars_files:
     - "vars.yml"
   roles:
-    #    - role: apt
-    #      tag: "apt"
-    #    - role: system-config
-    #      tag: "system-config"
-    #    - role: git
-    #      tag: "git"
-    #    - role: docker
-    #      tag: "docker"
+    - role: apt
+      tag:
+        - apt
+    - role: system-config
+      tag:
+        - system-config
+    - role: git
+      tag:
+        - git
+    - role: docker
+      tag:
+        - docker
     - role: southwest-checkin
-      tag: "southwest-checkin"
-    #    - role: at
-    #      tag: "at"
-    #    - role: nut
-    #      tag: "nut"
+      tag:
+        - southwest-checkin
+    - role: at
+      tag:
+        - at
+        - southwest-check-in
+    - role: nut
+      tag:
+        - nut
+        - ups
     # Applications - Docker
     - role: watchtower
       tag:
@@ -29,8 +38,31 @@
     - role: transmission-openvpn
       tag:
         - transmission-openvpn
-        - application 
+        - application
     - role: pi-hole
       tag:
         - pi-hole
         - application
+    - role: plex
+      tag:
+        - plex
+        - application
+    - role: swag
+      tag:
+        - swag
+        - application
+    - role: home-assistant
+      tag:
+        - home-assistant
+        - application
+        - home-automation
+    - role: node-red
+      tag:
+        - node-red
+        - application
+        - home-automation
+    - role: nginx
+      tag:
+        - nginx
+        - application
+        - home-automation
