--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -1,7 +1,7 @@
 ---
 - name: Clone Automatic Southwest check-in (scripts)
   git:
-    repo: git@github.com:ZinkNotTheMetal/Southwest.AutomaticCheckIn.git
+    repo: "{{ southwest_ssh_git }}"
     dest: /home/william/git/Southwest.AutomaticCheckIn
     accept_hostkey: yes
 
