--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -8,6 +8,7 @@
     state: directory
     mode: '0755'
     owner: root
+    recurse: yes
 
 - name: Add ansible user to docker group
   become: true
