--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -12,9 +12,9 @@
 
 - name: Move shell files to Southwest directory
   copy:
+    remote_src: true
     src: "{{ items }}"
     dest: /home/william/Southwest-Check-In
-    remote_src: yes
   with_fileglob:
     - "/home/william/git/Southwest.AutomaticCheckIn/scripts *.sh"
 
