attempt 9 at fixing config

--- a/roles/home-assistant/tasks/import-config.yml
+++ b/roles/home-assistant/tasks/import-config.yml
@@ -5,6 +5,7 @@
     path: "/docker/home-assistant/config"
     state: directory
     mode: "0777"
+    recurse: yes
     owner: root
 
 - name: Import HomeAssistant Configuration from git
