--- a/roles/home-assistant/tasks/main.yml
+++ b/roles/home-assistant/tasks/main.yml
@@ -14,8 +14,8 @@
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/docker/home-assistant/config:/config"
       - "/etc/localtime:/etc/localtime:ro"
-    devices:
-      - /dev/ttyACM0:/dev/ttyACM0:rwm
+#    devices:
+#      - /dev/ttyACM0:/dev/ttyACM0:rwm
     healthcheck:
       test: ["CMD", "curl", "-f", "http://{{ ha_container_ip }}:8123"]
       interval: 30s
