--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -13,10 +13,10 @@
 - name: Move shell files to Southwest directory
   copy:
     remote_src: true
-    src: "{{ items }}"
-    dest: /home/william/Southwest-Check-In
-  with_fileglob:
-    - "/home/william/git/Southwest.AutomaticCheckIn/scripts *.sh"
+    src: /home/william/git/Southwest.AutomaticCheckIn/scripts/
+    dest: home/william/Southwest-Check-In/
+#  with_fileglob:
+#    - "/home/william/git/Southwest.AutomaticCheckIn/scripts *.sh"
 
 - name: Move template file
   copy:
