--- a/site.yml
+++ b/site.yml
@@ -2,55 +2,55 @@
 - hosts: all
   vars_files:
     - "vars.yml"
-  roles:
-    - role: apt
-      tag:
-        - apt
-    - role: system-config
-      tag:
-        - system-config
-    - role: git
-      tag:
-        - git
-    - role: docker
-      tag:
-        - docker
-    - role: southwest-checkin
-      tag:
-        - southwest-checkin
-    - role: at
-      tag:
-        - at
-        - southwest-check-in
-    - role: nut
-      tag:
-        - nut
-        - ups
-    # Applications - Docker
-    - role: watchtower
-      tag:
-        - watchtower
-        - application
-    - role: portainer
-      tag:
-        - portainer
-        - application
-    - role: transmission-openvpn
-      tag:
-        - transmission-openvpn
-        - application
-    - role: pi-hole
-      tag:
-        - pi-hole
-        - application
-    - role: plex
-      tag:
-        - plex
-        - application
-    - role: swag
-      tag:
-        - swag
-        - application
+#  roles:
+#    - role: apt
+#      tag:
+#        - apt
+#    - role: system-config
+#      tag:
+#        - system-config
+#    - role: git
+#      tag:
+#        - git
+#    - role: docker
+#      tag:
+#        - docker
+#    - role: southwest-checkin
+#      tag:
+#        - southwest-checkin
+#    - role: at
+#      tag:
+#        - at
+#        - southwest-check-in
+#    - role: nut
+#      tag:
+#        - nut
+#        - ups
+#    # Applications - Docker
+#    - role: watchtower
+#      tag:
+#        - watchtower
+#        - application
+#    - role: portainer
+#      tag:
+#        - portainer
+#        - application
+#    - role: transmission-openvpn
+#      tag:
+#        - transmission-openvpn
+#        - application
+#    - role: pi-hole
+#      tag:
+#        - pi-hole
+#        - application
+#    - role: plex
+#      tag:
+#        - plex
+#        - application
+#    - role: swag
+#      tag:
+#        - swag
+#        - application
     - role: home-assistant
       tag:
         - home-assistant
