--- a/site.yml
+++ b/site.yml
@@ -2,13 +2,13 @@
 - hosts: all
   vars_files:
     - "vars.yml"
-#  roles:
+  roles:
 #    - role: apt
 #      tag:
 #        - apt
-#    - role: system-config
-#      tag:
-#        - system-config
+    - role: system-config
+      tag:
+        - system-config
 #    - role: git
 #      tag:
 #        - git
