--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -8,7 +8,7 @@
 
 - name: Ensure that the .zprofile is loaded
   become: true
-  templates:
+  template:
     src: .zprofile
     dest: /home/william/.zprofile
     owner: root
