--- a/site.yml
+++ b/site.yml
@@ -15,9 +15,9 @@
 #    - role: docker
 #      tag:
 #        - docker
-#    - role: southwest-checkin
-#      tag:
-#        - southwest-checkin
+    - role: southwest-checkin
+      tag:
+        - southwest-checkin
 #    - role: at
 #      tag:
 #        - at
@@ -61,8 +61,8 @@
 #        - node-red
 #        - application
 #        - home-automation
-    - role: nginx
-      tag:
-        - nginx
-        - application
-        - home-automation
+#    - role: nginx
+#      tag:
+#        - nginx
+#        - application
+#        - home-automation
