didn't need to become for changing permissions

--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -10,14 +10,11 @@
     path: /home/william/Southwest-Check-In
     state: directory
 
-- name: Move shell files to Southwest directory
-  become: true
+- name: Move '.sh' files to Southwest directory
   copy:
     remote_src: true
     src: /home/william/git/Southwest.AutomaticCheckIn/scripts/
     dest: /home/william/Southwest-Check-In/
-    owner: william
-    group: william
     mode: 0755
 
 - name: Move template file
