--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -11,12 +11,11 @@
     state: directory
 
 - name: Move '.sh' files to Southwest directory
-  become: true
   copy:
     remote_src: true
     src: /home/william/git/Southwest.AutomaticCheckIn/scripts/
     dest: /home/william/Southwest-Check-In/
-    mode: a+x
+    mode: 777
 
 - name: Move template file
   copy:
