--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -15,11 +15,14 @@
     state: directory
 
 - name: Move '.sh' files to Southwest directory
+  become: true
   copy:
     remote_src: true
     src: /home/william/git/Southwest.AutomaticCheckIn/scripts/
     dest: /home/william/Southwest-Check-In/
     mode: "777"
+    owner: william
+    group: william
 
 - name: Move template file
   copy:
