--- a/roles/southwest-checkin/tasks/clone-scripts.yml
+++ b/roles/southwest-checkin/tasks/clone-scripts.yml
@@ -9,7 +9,7 @@
   become: true
   file:
     path: /home/william/Southwest-Check-In
-    mode: "777"
+    mode: ugo=rwx
     owner: william
     group: william
     state: directory
@@ -20,7 +20,7 @@
     remote_src: true
     src: /home/william/git/Southwest.AutomaticCheckIn/scripts/
     dest: /home/william/Southwest-Check-In/
-    mode: "777"
+    mode: ugo=rwx
     owner: william
     group: william
 
