--- a/site.yml
+++ b/site.yml
@@ -9,15 +9,22 @@
 #    - role: system-config
 #      tag:
 #        - system-config
+    - role: gantsign.oh-my-zsh
+       users:
+         - username: william
+           theme: robbyrussell
+           plugins:
+             - git
+             - debian
 #    - role: git
 #      tag:
 #        - git
 #    - role: docker
 #      tag:
 #        - docker
-    - role: southwest-checkin
-      tag:
-        - southwest-checkin
+#    - role: southwest-checkin
+#      tag:
+#        - southwest-checkin
 #    - role: at
 #      tag:
 #        - at
