attempt to install oh my zsh correctly

--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -32,6 +32,6 @@
   become: true
   copy:
     src: .zshrc
-    dest: /home/william/.config/zshrc
+    dest: /home/william/.zshrc
     owner: root
     group: root
